2006-01-24  Martin Soto  <martinsoto@users.sourceforge.net>

	* expression/nodes.py (UnaryOperation.__init__): Fix super call.

2006-01-24  Martin Soto  <martinsoto@users.sourceforge.net>

	* sqlmap/generate.py: A proof-of-concept translator to SQL.

	* expression/rewrite.py (treeApplyObject): New function for
	executing diverse method of an object on the nodes of an
	expression tree.

2006-01-24  Martin Soto  <martinsoto@users.sourceforge.net>

	* serql/parser.py (Parser.exprFromTriple): Use readable column
	names instead of positional references for the canonical S
	relation.

	* expression/nodes.py (FieldRef.__repr__): Show field identifier
	inside quotes.

2006-01-23  Martin Soto  <martinsoto@users.sourceforge.net>

	* serql/parser.py (Parser.selectQueryExpr): 
	* expression/nodes.py (MapResult): 
	Replace Map and NameColumns by a single MapResult node that does
	column mapping and naming.

2006-01-23  Martin Soto  <martinsoto@users.sourceforge.net>

	* serql/serql.g (selectQuery, graphPattern, pathExprList)
	(pathExpr, pathExprTail): Use the context stack.

	* serql/parser.py (Parser.__slots__, Parser.__init__) 
	(Parser.pushContext, Parser.popContext, Parser.currentContext):
	In preparation for nested SELECT queries, add a stack of
	SelectContext objects.
	(Parser.exprFromPattern, Parser.graphPatternExpr) 
	(Parser.selectQueryExpr, Parser.exprFromTriple): Use the new
	context stack.

2006-01-23  Martin Soto  <martinsoto@users.sourceforge.net>

	* antlr.py: Include antlr.py in the source tree.

2006-01-23  Martin Soto  <martinsoto@users.sourceforge.net>

	* serql/serql.g (query):
	* serql/parser.py (Parser.__init__): Initialize local prefix in
	Parser constructor.

	* serql/environment.py (ParseEnvironment.__slots__) 
	(ParseEnvironment.__init__, ParseEnvironment.setPrefixes) 
	(ParseEnvironment.getPrefixes, ParseEnvironment.parse): Create
	new parser and lexer objects every time a query is parsed.

2006-01-23  Martin Soto  <martinsoto@users.sourceforge.net>
