@@ -1,3 +1,8 @@
+2006-01-31  Martin Soto  <martinsoto@users.sourceforge.net>
+
+	* sqlmap/create-schema.sql: Initial SQL script for creating the
+	database schema.
+
 2006-01-24  Martin Soto  <martinsoto@users.sourceforge.net>
 
 	* expression/nodes.py (UnaryOperation.__init__): Fix super call.
